--- a/src/docs/products/products.yaml
+++ b/src/docs/products/products.yaml
@@ -6,19 +6,17 @@ paths:
         - Products
       responses:
         "200":
-          description: "Todo ok"
+          description: "Success"
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#components/schemas/products'
+                  $ref: '#components/schemas/Products'
         "400":
-          description: "Algo salió mal"
-        "500":
-          description: "Error interno del servidor"
+          description: "Error"
     post:
-      summary: Creates a product
+      summary: Creates a new product
       tags:
         - Products
       requestBody:
@@ -26,20 +24,18 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#components/requestBodies/UpdateProduct'
+              $ref: '#components/requestBodies/NewProduct'
       responses:
         "200":
-          description: "Todo ok"
+          description: "Success"
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#components/schemas/products'
+                  $ref: '#components/schemas/Products'
         "400":
-          description: "Algo salió mal"
-        "500":
-          description: "Error interno del servidor"
+          description: "Error"
   /api/products/{pid}:
     get:
       summary: Gets a product by product id
@@ -49,31 +45,27 @@ paths:
         - name: pid
           in: path
           required: true
-          description: El pid es el product id interno que asigna la base de datos (el _id)
+          description: The pid is the interal id the database assigns to the products (_id)
           schema:
             $type: string
+            example: 64ac240de20f4c64da796b9e
       responses:
         "200":
-          description: "Todo ok"
-          content:
-            application/json:
-              schema:
-                $ref: '#components/schemas/Products'
+          description: "Success"
         "400":
-          description: "Algo salió mal"
-        "500":
-          description: "Error interno del servidor"
+          description: "Error"
     put:
-      summary: Updates a product by produc id
+      summary: Updates a product by product id
       tags:
         - Products
       parameters:
       - name: pid
         in: path
         required: true
-        description: El pid es el product id interno que asigna la base de datos (el _id)
+        description: The pid is the interal id the database assigns to the products (_id)
         schema:
           $type: string
+          example: 64ac240de20f4c64da796b9e
       requestBody:
         required: true
         content:
@@ -82,15 +74,13 @@ paths:
               $ref: '#components/requestBodies/UpdateProduct'
       responses:
         "200":
-          description: "Todo ok"
+          description: "Success"
           content:
             application/json:
               schema:
                 $ref: '#components/schemas/Products'
         "400":
-          description: "Algo salió mal"
-        "500":
-          description: "Error interno del servidor"
+          description: "Error"
     delete:
       summary: Deletes a product by product id
       tags:
@@ -99,60 +89,47 @@ paths:
         - name: pid
           in: path
           required: true
-          description: El pid es el product id interno que asigna la base de datos (el _id)
+          description: The pid is the interal id the database assigns to the products (_id)
           schema:
             $type: string
+            example: 64ac240de20f4c64da796b9e
       responses:
         "200":
-          description: "Todo ok"
-          content:
-            application/json:
-              schema:
-                $ref: '#components/schemas/Products'
+          description: "Success"
         "400":
-          description: "Algo salió mal"
-        "500":
-          description: "Error interno del servidor"
+          description: "Error"
 components:
   schemas:
     Products:
       type: object
       properties:
-        _id: 
-          type: ObjectId
-          description: Id de producto. Autogenerado por la base de datos
         title: 
           type: String
-          description: Título del producto
+          description: Product title or name
         descripcion:
           type: String
-          description: Descripción del producto
-        code: 
-          type: String
-          description: Código de producto. Generado a la hora de crear el producto
+          description: Product description
         price:
           type: Number
-          description: Precio unitario del producto
+          description: Unit price of the product
         status: 
           type: Boolean
-          description: Indica si el producto está activo
+          description: Indicates if product is active
         stock:
           type: Number
-          description: Stock disponible del producto
+          description: Available stock of the product
         category:
           type: String
-          description: Categoría del producto
+          description: Product category
         thumbnails:
           type: Array
-          description: Imágenes del producto
+          description: Links to product thumbnail pictures
         owner:
           type: String
-          description: Usuario creador del producto
+          description: The username of the user who created the product
       example:
-        _id: ObjectId('645ae40952e2c6718d5a0308')
         title: Joker Van Gogh
         description: Hand designed, laser cut, non classic shape, wooden puzzle
-        code: 61e76d4e-5a9d-4279-93fd-4034abcce2e3
         price: 6500
         status: true
         stock: 10
@@ -160,43 +137,59 @@ components:
         thumbnails: []
         owner: admin@mail.com
   requestBodies:
+    NewProduct:
+      type: object
+      properties:
+        title: 
+          type: String
+        descripcion:
+          type: String
+        price:
+          type: Number
+        status: 
+          type: Boolean
+        stock:
+          type: Number
+        category:
+          type: String
+        thumbnails:
+          type: Array
+        owner:
+          type: String
+      example:
+        title: Add a title or product name
+        description: Add a brief product description
+        price: 7500
+        status: true
+        stock: 50
+        category: Add a product category
+        thumbnails: []
+        owner: admin@mail.com
     UpdateProduct:
       type: object
       properties:
         title: 
           type: String
-          description: Título del producto
         descripcion:
           type: String
-          description: Descripción del producto
-        code: 
-          type: String
-          description: Código de producto. Generado a la hora de crear el producto
         price:
           type: Number
-          description: Precio unitario del producto
         status: 
           type: Boolean
-          description: Indica si el producto está activo
         stock:
           type: Number
-          description: Stock disponible del producto
         category:
           type: String
-          description: Categoría del producto
         thumbnails:
           type: Array
-          description: Imágenes del producto
         owner:
           type: String
-          description: Usuario creador del producto
       example:
         title: Updated Title
         description: Updated Description
-        code: Updated Code
-        price: Updated Price
-        status: Updated Status
-        stock: Updated Stock
-        category: Updated Category
-        thumbnails: Images Links Array
-        owner: Different Owner
+        price: 7500
+        status: true
+        stock: 50
+        category: New Category
+        thumbnails: []
+        owner: admin@mail.com
